tests/pass/array-2.ct
var arr: [int:5 + 10];