tests/fail/div-0.ct
var x = [25 & 5 / 0];
